--- a/nginx.conf
+++ b/nginx.conf
@@ -18,4 +18,12 @@ server {
     location ~ \.(gif|jpg|png|svg|css|js|flv|ico|swf|wav|woff|ttf|eot)$ {
         try_files $uri =404;
     }
+    location /ngx_status
+    {
+        stub_status on;
+        access_log off;
+        allow 10.0.0.0/8;
+        deny all;
+    }
+
 }
