--- a/package.json
+++ b/package.json
@@ -1,36 +1,49 @@
 {
-  "name": "fe-staff",
+  "name": "fe-user-growth",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 8080",
+    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "babel-plugin-import": "^1.11.0",
-    "echarts": "^4.2.0-rc.2",
-    "element-ui": "^2.4.11",
-    "iview": "^3.2.2",
-    "js-cookie": "^2.2.0",
-    "moment": "^2.24.0",
-    "normalize.css": "^8.0.1",
-    "qs": "^6.6.0",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.2",
-    "vuex": "^3.0.1"
+    "axios": "^0.19.0",
+    "core-js": "^3.3.2",
+    "element-ui": "^2.12.0",
+    "js-base64": "^2.5.1",
+    "js-cookie": "^2.2.1",
+    "less": "^3.10.3",
+    "nprogress": "^0.2.0",
+    "qrcode.vue": "^1.7.0",
+    "qs": "^6.9.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-plugin-eslint": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "vue-template-compiler": "^2.5.17"
+    "@vue/cli-plugin-babel": "^4.0.0",
+    "@vue/cli-plugin-eslint": "^4.0.0",
+    "@vue/cli-service": "^4.0.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "less-loader": "^5.0.0",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
   },
   "postcss": {
     "plugins": {
@@ -39,7 +52,6 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "last 2 versions"
   ]
 }
