--- a/nginx.conf
+++ b/nginx.conf
@@ -11,8 +11,8 @@ server {
     root /project/dist;
     index index.html;
 
-    location /fe-staff/ {
-        try_files $uri $uri/ /fe-staff/index.html;
+    location /fe-user-growth/ {
+        try_files $uri $uri/ /fe-user-growth/index.html;
     }
 
     location ~ \.(gif|jpg|png|svg|css|js|flv|ico|swf|wav|woff|ttf|eot)$ {
