--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-base64": "^2.5.1",
     "js-cookie": "^2.2.1",
     "less": "^3.10.3",
+    "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "qrcode.vue": "^1.7.0",
     "qs": "^6.9.1",
