transfrom icon svg

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "less-loader": "^5.0.0",
+    "svg-sprite-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
